[gd_scene load_steps=11 format=3 uid="uid://dp38xo0la8hm6"]

[ext_resource type="Script" path="res://addons/hitbox_editor/control_window.gd" id="1_bxg5m"]
[ext_resource type="Script" path="res://addons/hitbox_editor/savepopup.gd" id="2_e4lpr"]
[ext_resource type="Texture2D" uid="uid://dkmwvfbgww01e" path="res://Sprites/ATTACK 1.png" id="2_lmi6c"]
[ext_resource type="Script" path="res://addons/hitbox_editor/frame_selection.gd" id="3_lun56"]
[ext_resource type="Texture2D" uid="uid://0cnwfusgna42" path="res://Platformer Collection/Melee Attack/Attack 1.png" id="5_6x4p3"]
[ext_resource type="Script" path="res://addons/hitbox_editor/editor_canvas.gd" id="6_2cpr0"]
[ext_resource type="Script" path="res://addons/hitbox_editor/canvas_bg.gd" id="6_uoecn"]
[ext_resource type="Script" path="res://addons/hitbox_editor/check_button_boxtype.gd" id="8_e7lct"]

[sub_resource type="SystemFont" id="SystemFont_bcyo7"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_wcshn"]

[node name="ControlWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxg5m")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 370.0
offset_bottom = 473.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="DialogButtons" type="HBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="load" type="Button" parent="MainContainer/HBoxContainer/DialogButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Load"

[node name="PopupMenu" type="PopupMenu" parent="MainContainer/HBoxContainer/DialogButtons/load"]
title = "Load Options"
initial_position = 2
size = Vector2i(330, 245)
unresizable = false
borderless = false
extend_to_title = true
item_count = 3
item_0/text = "Load SpriteSheet"
item_1/text = "Load Animation"
item_1/id = 1
item_2/text = "Load Animation Library"
item_2/id = 2

[node name="save" type="Button" parent="MainContainer/HBoxContainer/DialogButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Save"
script = ExtResource("2_e4lpr")

[node name="PopupMenu" type="PopupMenu" parent="MainContainer/HBoxContainer/DialogButtons/save"]
title = "Save Options"
initial_position = 2
size = Vector2i(330, 245)
unresizable = false
borderless = false
extend_to_title = true
item_count = 3
item_0/text = "Save Animation"
item_1/text = "Save Library"
item_1/id = 1
item_2/text = "Save As Scene"
item_2/id = 2

[node name="SpriteSheetControls" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="FrameSelection" type="Sprite2D" parent="MainContainer/HBoxContainer/SpriteSheetControls"]
position = Vector2(686, 110)
texture = ExtResource("2_lmi6c")
script = ExtResource("3_lun56")
h = 7
font = SubResource("SystemFont_bcyo7")

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSeparator" type="HSeparator" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Library Name:  "

[node name="LineEdit" type="LineEdit" parent="MainContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Name..."

[node name="Label" type="Label" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 26
text = "Animation List"

[node name="ItemList" type="ItemList" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.15

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0

[node name="ExtraContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 434.0
offset_right = 743.0
offset_bottom = 535.0

[node name="CanvasBG" type="Sprite2D" parent="ExtraContainer"]
texture_filter = 1
position = Vector2(391, -258)
texture = ExtResource("5_6x4p3")
script = ExtResource("6_uoecn")
metadata/_edit_group_ = true

[node name="EditorCanvas" type="Sprite2D" parent="ExtraContainer/CanvasBG"]
texture_filter = 1
texture = ExtResource("5_6x4p3")
script = ExtResource("6_2cpr0")

[node name="ScaleAndTypeControls" type="VBoxContainer" parent="ExtraContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="ExtraContainer/ScaleAndTypeControls"]
custom_minimum_size = Vector2(169, 0)
layout_mode = 2
theme = SubResource("Theme_wcshn")
min_value = 1.0
max_value = 5.0
step = 0.01
value = 1.0

[node name="CheckButton" type="CheckButton" parent="ExtraContainer/ScaleAndTypeControls"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Hitboxes"
script = ExtResource("8_e7lct")

[node name="SaveEdits" type="Button" parent="ExtraContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="ExitButton" type="Button" parent="ExtraContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="ExtraContainer"]
initial_position = 2
size = Vector2i(474, 100)
dialog_text = "You have unsaved changes. Are you sure you want to exit?"

[node name="VBoxContainer" type="VBoxContainer" parent="ExtraContainer"]
layout_mode = 2

[node name="FrameSelector" type="HBoxContainer" parent="ExtraContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ExtraContainer/VBoxContainer/FrameSelector"]
layout_mode = 2
text = "    Current Frame:   "

[node name="frame_select" type="SpinBox" parent="ExtraContainer/VBoxContainer/FrameSelector"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ExtraContainer/VBoxContainer"]
layout_mode = 2

[node name="frame_labels" type="VBoxContainer" parent="ExtraContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="Hframes" type="Label" parent="ExtraContainer/VBoxContainer/HBoxContainer/frame_labels"]
layout_mode = 2
size_flags_vertical = 3
text = "        hframes:"

[node name="Vframes" type="Label" parent="ExtraContainer/VBoxContainer/HBoxContainer/frame_labels"]
layout_mode = 2
size_flags_vertical = 2
text = "        vframes:"

[node name="FrameSelection" type="VBoxContainer" parent="ExtraContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Hframes" type="SpinBox" parent="ExtraContainer/VBoxContainer/HBoxContainer/FrameSelection"]
layout_mode = 2
min_value = 1.0
value = 1.0
editable = false

[node name="Vframes" type="SpinBox" parent="ExtraContainer/VBoxContainer/HBoxContainer/FrameSelection"]
layout_mode = 2
min_value = 1.0
value = 1.0
editable = false

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/DialogButtons/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/DialogButtons/save" to="MainContainer/HBoxContainer/DialogButtons/save" method="_on_pressed"]
[connection signal="id_pressed" from="MainContainer/HBoxContainer/DialogButtons/save/PopupMenu" to="MainContainer/HBoxContainer/SpriteSheetControls/FrameSelection" method="_on_popup_menu_id_pressed"]
[connection signal="visibility_changed" from="MainContainer/HBoxContainer/SpriteSheetControls/FrameSelection" to="MainContainer/HBoxContainer/SpriteSheetControls/FrameSelection" method="_on_visibility_changed"]
[connection signal="text_changed" from="MainContainer/VBoxContainer/HBoxContainer/LineEdit" to="MainContainer/HBoxContainer/SpriteSheetControls/FrameSelection" method="_on_line_edit_text_changed"]
[connection signal="item_activated" from="MainContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="texture_changed" from="ExtraContainer/CanvasBG" to="ExtraContainer/CanvasBG" method="_on_texture_changed"]
[connection signal="frame_changed" from="ExtraContainer/CanvasBG/EditorCanvas" to="ExtraContainer/CanvasBG/EditorCanvas" method="_on_frame_changed"]
[connection signal="value_changed" from="ExtraContainer/ScaleAndTypeControls/HSlider" to="ExtraContainer/CanvasBG" method="_on_h_slider_value_changed"]
[connection signal="toggled" from="ExtraContainer/ScaleAndTypeControls/CheckButton" to="ExtraContainer/CanvasBG/EditorCanvas" method="_on_check_button_toggled"]
[connection signal="toggled" from="ExtraContainer/ScaleAndTypeControls/CheckButton" to="ExtraContainer/ScaleAndTypeControls/CheckButton" method="_on_toggled"]
[connection signal="pressed" from="ExtraContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="ExtraContainer/VBoxContainer/FrameSelector/frame_select" to="ExtraContainer/CanvasBG" method="_on_frame_select_value_changed"]
[connection signal="value_changed" from="ExtraContainer/VBoxContainer/HBoxContainer/FrameSelection/Hframes" to="ExtraContainer/CanvasBG" method="_on_hframes_value_changed"]
[connection signal="value_changed" from="ExtraContainer/VBoxContainer/HBoxContainer/FrameSelection/Vframes" to="ExtraContainer/CanvasBG" method="_on_vframes_value_changed"]
